--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.mjs",
   "scripts": {
+    "start": "node index.mjs",
     "test": "mocha -r dotenv/config",
     "dev": "nodemon -r dotenv/config"
   },
@@ -19,8 +20,6 @@
     "jsonapi-fractal": "^1.0.19",
     "mocha": "^9.1.1",
     "mysql": "^2.18.1",
-    "serverless": "^2.57.0",
-    "serverless-http": "^2.7.0",
     "supertest": "^6.1.6"
   },
   "type": "module",
